# learn_rag

./: ingestion_pipeline.py  pyproject.toml  retrival_pipeline.py
db/chroma_db/620b1bdf-c0c9-495c-9e98-abbc12a1c5cc/: index_metadata.pickle
